# upmoon25-auto

./: .gitignore  BUILD.bash  INSTALL.bash  MAX_RUN.sh  README.md  RUN_LAPTOP.bash  RUN_LAPTOP_AUTO.bash  RUN_LAPTOP_RC.bash  RUN_ROBOT.bash  empty.rviz
gz_worlds/: arena1.world  arena2.world  camtest.world  tag.world  world1.world
src/: RUN_ROBOT.bash
src/backend/: package.xml  setup.cfg  setup.py
src/backend/backend/: cam_tester.py  global_costmapper.py  global_mapper.py  head_controller.py  joystick_driver.py  localizer.py  main_controller.py  mining_controller.py  motion_controller.py  path_planner.py  rc_controller.py  rgb_transport.py  test_localizer.py  test_path_planner.py  test_path_replanning.py
src/backend/backend/debug/: image_saver.py  tag_client.py
src/backend/config/: nav2_config.yaml
src/backend/description/: cam_test.urdf.xacro  robot.urdf.xacro  robot_actuator.xacro  robot_depth.xacro  robot_gazebo.xacro  robot_imu.xacro  robot_inertia.xacro  robot_properties.xacro  robot_servo.xacro  robot_wheel.xacro  sim_robot.urdf.xacro
src/backend/launch/: apriltag_test_launch.py  camtest_launch.py  launch.py  map_launch.py  miner_launch.py  pc_launch.py  sim_launch.py
src/backend/resource/: fsm.txt
src/frontend/: package.xml  setup.cfg  setup.py
src/frontend/frontend/: arduino_driver.py  bucket_alarm.py  bucket_spin.py  conveyor.py  depth_driver.py  drive_motors.py  joystick_driver.py  keyboard_driver.py  keyboard_driver_comp.py  rgb_driver.py  rgb_transport.py  t265_driver.py  tag_detector.py
src/frontend/frontend/arduino/: arduino.sh
src/frontend/frontend/arduino/hex/: ServoTest.ino.hex
src/frontend/frontend/deprecated/: bucket_servos.py  camera.py  camera_pan.py
src/frontend/launch/: comp_launch.py  jet_launch.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: MapCmd.msg
src/interfaces/srv/: FindPath.srv  FindTag.srv  GoTo.srv
src/sensor/: CMakeLists.txt  servo_plugin.cc
